--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -262,7 +262,7 @@
 	&__text {
 		text-transform: uppercase;
 		color: #fff;
-		background: url('../images/shop-bag.png') no-repeat;
+		background: url('../images/shop-bag-min.png') no-repeat;
 		background-position: 0 9px;
 		padding: 12px 25px;
 		display: inline-block;
@@ -279,4 +279,136 @@
 	border-top: 1px solid #dedede;
 	padding: 14px 0;
 	font-size: 14px;
+}
+
+.call {
+	margin-bottom: 10px;
+	&.icon--phone {
+		position: relative;
+		&::before {
+			position: absolute;
+			font-size: 22px;
+			color: #7c7c7c;
+			left: 0;
+			top: 0;
+		}
+	}
+	&__text {
+		display: block;
+		color: #000;
+		padding-left: 30px;
+		font-family: 'HelveticaNeue', Arial, sans-serif;
+		font-size: 14px;
+		margin-bottom: 10px;
+	}
+	&__number {
+		&:nth-child(2) {
+			padding-left: 25px;
+		}
+		font-size: 14px;
+		color: #999;
+		margin-left: 10px;
+		margin-right: 10px;
+		font-family: 'HelveticaNeue', Arial, sans-serif;
+		&-text {
+			color: #999;
+			font-family: 'HelveticaNeue', Arial, sans-serif;
+			font-size: 14px;
+		}
+	}
+}
+
+.location {
+	&.icon--location-pin {
+		position: relative;
+		&::before {
+			position: absolute;
+			font-size: 22px;
+			color: #7c7c7c;
+			left: 0;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+	}
+	&__text {
+		display: block;
+		color: #000;
+		padding-left: 30px;
+		font-family: 'HelveticaNeue', Arial, sans-serif;
+		font-size: 14px;
+		margin-bottom: 10px;
+	}
+}
+
+.details {
+	border-top: 1px solid #dedede;
+	padding: 20px 0;
+	&__title {
+		margin: 0;
+		font-weight: 300;
+		font-size: 25px;
+		margin-bottom: 25px;
+		position: relative;
+		&::after {
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			right: 0;
+			content: "";
+			width: 16px;
+			height: 2px;
+			background-color: #000;
+		}
+	}
+	&__item {
+		padding-right: 45px;
+		&-title {
+			font-weight: 600;
+			margin-right: 5px;
+		}
+	}
+	&__code {
+		margin-top: 25px;
+		&-title {
+			font-weight: 600;
+			margin-right: 5px;
+		}
+		&-number {
+			color: #a7a7a7;
+		}
+	}
+	&__info {
+		margin-top: 20px;
+	}
+	&__text {
+		margin: 0;
+		margin-top: 20px;
+		&.details__text--important {
+			font-weight: 600;
+			padding-right: 35px;
+			a {
+				color: #000;
+			}
+		}
+		&-item {
+			display: block;
+			padding-right: 30px;
+		}
+	}
+}
+
+.social {
+	border-top: 1px solid #dedede;
+	padding: 24px 0;
+	display: flex;
+	justify-content: flex-end;
+	&__text {
+		font-size: 14px;
+		font-weight: 600;
+	}
+	&__item {
+		margin-left: 20px;
+		color: #3a3a3a;
+		text-decoration: none;
+	}
 }
