--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,3 +7,7 @@
 @import 'header';
 @import 'breadcrumbs';
 @import 'product';
+@import 'similar-goods';
+@import 'see-other';
+@import 'benefits';
+@import 'footer';
