--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
 		link(rel="stylesheet", type= "text/css", href="css/style.css")
 	body
 		header(class="header")
-			div(class="header-logo")
+			div(class="header-logo", id="logo")
 				img(src="images/logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
 			div(class="switcher")
 				a(href="#", class="switcher__item icon icon--clock")
@@ -43,12 +43,12 @@ html(lang="en")
 				a(href="#", class="breadcrumbs__item") Категория 1
 				span /
 				span(class="breadcrumbs__item") Costa Patch Pocket Denim Top
-			section(class="product")
+			section(class="product", id="product")
 				div(class="time-left icon icon--clock")
 					span(class="time-left__text") До конца распродажи
 					span(class="time-left__time") 3 дня, 15:37:01
 				div(class="photo")
-					img(src="images/photo.jpg", alt="photo")
+					img(src="images/photo-min.jpg", alt="photo")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 					h2(class="product__subtitle") Costa Patch Pocket Denim Top
@@ -99,34 +99,35 @@ html(lang="en")
 							a(href="#", class="location__text") Наличие в бутиках ONE CLUB
 					div(class="details")
 						h3(class="details__title") Описание и детали
-						p(class="details__text")
-							span(class="details__item") Состав:
+						div(class="details__item")
+							span(class="details__item-title") Состав:
 							span(class="details__item-value") 100% трикотаж
-							span(class="details__item") Сезон:
+						div(class="details__item")
+							span(class="details__item-title") Сезон:
 							span(class="details__item-value") демисезон
-							span(class="details__item") Детали:
-							span(class="details__item-value") Облегающая модель выполнена из гладкого трикотажа.
-						p(class="details__text")
-							span(class="details__code") Код товара:
+						div(class="details__item")
+							span(class="details__item-title") Детали:
+							span(class="details__item-value") Облегающая модель выполнена из гладкого трико-тажа.
+						div(class="details__code")
+							span(class="details__code-title") Код товара:
 							span(class="details__code-number") 1234-5678-8765-4321
 					div(class="details")
 						h3(class="details__title") Измерения
-						p(class="details__text")
-							span(class="details__item") Размер вещи на фото:
+						div(class="details__item")
+							span(class="details__item-title") Размер вещи на фото:
 							span(class="details__item-value") S
-						p(class="details__text")
-							span(class="details__text-item") Обхват груди: 85 см
-							span(class="details__text-item") Обхват талии: 61 см
-							span(class="details__text-item") Обхват бедер: 89 см
-							span(class="details__text-item") Рост: 175 см
-						p(class="details__text")
-							span(class="details__text--important") Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, 
+						div(class="details__info")
+							p(class="details__text") Обхват груди: 85 см
+							p(class="details__text") Обхват талии: 61 см
+							p(class="details__text") Обхват бедер: 89 см
+							p(class="details__text") Рост: 175 см
+						p(class="details__text details__text--important") Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, 
 								a(href="#") таблицей размеров
-								|,или обратитесь к нашему консультанту
+								|, или обратитесь к нашему консультанту
 					div(class="details")
 						h3(class="details__title") Доставка и возврат
-						p(class="details__text")
-							span(class="details__item") Ожидаемая дата доставки:
+						div(class="details__item")
+							span(class="details__item-title") Ожидаемая дата доставки:
 							span(class="details__item-value") 21.09.2016 - 23.09.2016
 						p(class="details__text details__text--important") Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.
 						p(class="details__text details__text--important") Вы можете выбрать любой удобный способ доставки:
@@ -137,44 +138,49 @@ html(lang="en")
 						p(class="details__text details__text--important") Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.
 					div(class="social")
 						span(class="social__text") Поделиться
-						div(class="social__item icon icon--facebook")
-						div(class="social__item icon icon--vk")
-						div(class="social__item icon icon--google-plus")
-						div(class="social__item icon icon--twitter")
+						a(href="#", class="social__item icon icon--facebook")
+						a(href="#", class="social__item icon icon--vk")
+						a(href="#", class="social__item icon icon--google-plus")
+						a(href="#", class="social__item icon icon--twitter")
 			section(class="similar-goods")
 				h2(class="similar-goods__title") Похожие товары
-				div(class="item")
-					div(class="item__img")
-						img(src="", alt="item-img", class="item__img-image")
-					h3(class="item__title") Tanya Taylor
-					h4(class="item__subtitle") Andy Striped Mini Skirt
-					div(class="item__price")
-						span(class="price--old") 30 000 грн
-						span(class="price--new") 15 000 грн
-				div(class="item")
-					div(class="item__img")
-						img(src="", alt="item-img", class="item__img-image")
-					h3(class="item__title") Tanya Taylor
-					h4(class="item__subtitle") Andy Striped Mini Skirt
-					div(class="item__price")
-						span(class="price--old") 30 000 грн
-						span(class="price--new") 15 000 грн
-				div(class="item")
-					div(class="item__img")
-						img(src="", alt="item-img", class="item__img-image")
-					h3(class="item__title") Tanya Taylor
-					h4(class="item__subtitle") Andy Striped Mini Skirt
-					div(class="item__price")
-						span(class="price--old") 30 000 грн
-						span(class="price--new") 15 000 грн
-				div(class="item")
-					div(class="item__img")
-						img(src="", alt="item-img", class="item__img-image")
-					h3(class="item__title") Tanya Taylor
-					h4(class="item__subtitle") Andy Striped Mini Skirt
-					div(class="item__price")
-						span(class="price--old") 30 000 грн
-						span(class="price--new") 15 000 грн
+				div(class="similar-goods__block")
+					div(class="item")
+						div(class="item__img")
+							a(href="#")
+								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						h3(class="item__title") Tanya Taylor
+						h4(class="item__subtitle") Andy Striped Mini Skirt
+						div(class="item__price")
+							span(class="price--old") 30 000 грн
+							span(class="price--new") 15 000 грн
+					div(class="item")
+						div(class="item__img")
+							a(href="#")
+								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						h3(class="item__title") Tanya Taylor
+						h4(class="item__subtitle") Andy Striped Mini Skirt
+						div(class="item__price")
+							span(class="price--old") 30 000 грн
+							span(class="price--new") 15 000 грн
+					div(class="item")
+						div(class="item__img")
+							a(href="#")
+								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						h3(class="item__title") Tanya Taylor
+						h4(class="item__subtitle") Andy Striped Mini Skirt
+						div(class="item__price")
+							span(class="price--old") 30 000 грн
+							span(class="price--new") 15 000 грн
+					div(class="item")
+						div(class="item__img")
+							a(href="#")
+								img(src="images/item-min.jpg", alt="item-img", class="item__img-image")
+						h3(class="item__title") Tanya Taylor
+						h4(class="item__subtitle") Andy Striped Mini Skirt
+						div(class="item__price")
+							span(class="price--old") 30 000 грн
+							span(class="price--new") 15 000 грн
 			section(class="see-other")
 				span(class="see-other__text") Смотрите также:
 				a(href="#", class="see-other__link") Одежда
@@ -188,12 +194,13 @@ html(lang="en")
 				div(class="benefits__item")
 					h3(class="benefits__item-title") Доставка
 					p(class="benefits__item-text") Вы можете примерить вещи в одном из наших
-						a(href="#") бутиков
+						a(href="#", class="benefits__item-link") бутиков
 						| или заказать доставку по любому удобному адресу.
 				div(class="benefits__item")
 					h3(class="benefits__item-title") Помощь
-					p(class="benefits__item-text") Время работы службы поддержки: ежедневно с 10:00 до 21:00. +38 044 359-08-99, +38 095 458-98-46
-				div(class="to-top")
+					p(class="benefits__item-text") Время работы службы поддержки: ежедневно с 10:00 до 21:00. 
+						span +38 044 359-08-99, +38 095 458-98-46
+			a(href="#logo", class="to-top")
 		footer(class="footer")
 			nav(class="footer__main-menu")
 				span(class="footer__main-menu-item") Каталог
@@ -216,17 +223,21 @@ html(lang="en")
 				a(href="#", class="footer__about-menu-item") Партнерам
 				a(href="#", class="footer__about-menu-item") Контакты
 				a(href="#", class="footer__about-menu-item") FAQ
-			nav(class="copy")
+			div(class="copy")
 				div(class="footer-logo")
-					img(src="", alt="logo", class="logo-img")
+					img(src="images/logo-footer-min.png", alt="logo", class="logo-img")
 				span(class="copy-text") &copy; 2016 ONE CLUB 2.0
 				span(class="copy-text") All Right reserved
-				div(class="footer-social")
-					div(class="footer-social__item icon icon--facebook")
-					div(class="footer-social__item icon icon--instagram")
-					div(class="footer-social__item icon icon--twitter")
-					div(class="footer-social__item icon icon--pinterest")
-				div(class="credit")
-					div(class="visa")
-					div(class="master-card")
-					div(class="liqpay")
+				div(class="footer-social-credit")
+					div(class="footer-social")
+						a(href="#", class="footer-social__item icon icon--facebook")
+						a(href="#", class="footer-social__item icon icon--instagram")
+						a(href="#", class="footer-social__item icon icon--twitter")
+						a(href="#", class="footer-social__item icon icon--pinterest")
+					div(class="credit")
+						div(class="credit__item")
+							img(src="images/visa-min.png", alt="visa", class="credit__visa-img")
+						div(class="credit__item")
+							img(src="images/master-card-min.png", alt="master-card", class="credit__master-card-img")
+						div(class="credit__item")
+							img(src="images/liqpay-min.png", alt="liqpay", class="credit__liqpay-img")
