--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
 	head
 		title= "Card"
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600", rel="stylesheet")
 		link(rel="stylesheet", type="text/css", href="css/normalize.css")
 		link(rel="stylesheet", type= "text/css", href="css/style.css")
@@ -48,7 +48,6 @@ html(lang="en")
 					span(class="time-left__text") До конца распродажи
 					span(class="time-left__time") 3 дня, 15:37:01
 				div(class="photo")
-					img(src="images/photo-min.jpg", alt="photo")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 					h2(class="product__subtitle") Costa Patch Pocket Denim Top
