--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,10 @@
 	&-logo {
 		margin: 30px 50px;
 		width: 325px;
+		@include respond-to(tablets) {
+			order: 1;
+			margin: 18px;
+		}
 	}
 }
 
@@ -16,6 +20,11 @@
 
 .switcher {
 	margin-top: 88px;
+	@include respond-to(tablets) {
+		order: 3;
+		margin-top: -48px;
+		margin-left: 20px;
+	}
 	&__item {
 		display: inline-block;
 		background-color: #e5e5e5;
@@ -65,6 +74,11 @@
 	flex-direction: column;
 	margin-top: 20px;
 	margin-right: 48px;
+	@include respond-to(tablets) {
+		order: 2;
+		margin-right: 18px;
+		margin-top: 10px;
+	}
 }
 
 .contact {
@@ -144,17 +158,17 @@
 		position: absolute;
 		top: 50%;
 		right: 9px;
-		width: 8px;
-		height: 8px;
+		width: 10px;
+		height: 10px;
 		border: 2px solid #f68235;
 		border-radius: 100%;
 		transform: translateY(-50%) rotate(-45deg);
 		&::before {
 			content: '';
 			position: absolute;
-			top: 10px;
-			left: 3px;
-			height: 4px;
+			top: 8px;
+			left: 2px;
+			height: 5px;
 			width: 2px;
 			background-color: #f68235;
 		}
@@ -168,6 +182,11 @@
 	justify-content: space-between;
 	padding-left: 50px;
 	padding-right: 50px;
+	@include respond-to(tablets) {
+		order: 4;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 	&__item {
 		display: block;
 		text-decoration: none;
