--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -55,11 +55,14 @@
 
 .photo {
 	background: url('../images/photo-min.jpg') no-repeat;
-	width: 2000px;
-	height: 655px;
+	width: 60%;
 	@include respond-to(tablets) {
 		background: url('../images/photo-tab-min.jpg') no-repeat;
 	}
+}
+
+.description {
+	width: 40%;
 }
 
 .price {
@@ -258,6 +261,14 @@
 		background-color: #eaeaea;
 		padding: 7px;
 		text-align: center;
+		@include respond-to(tablets) {
+			font-size: 12px;
+			width: 90%;
+			left: 10%;
+		}
+		&-number {
+			margin-right: 5px;
+		}
 		&::after {
 			content: "";
 			position: absolute;
@@ -266,6 +277,9 @@
 			transform: translateX(-50%);
 			border: 11px solid transparent;
 			border-top: 11px solid #eaeaea;
+			@include respond-to(tablets) {
+				left: 75%;
+			}
 		}
 	}
 }
@@ -322,6 +336,7 @@
 	@include respond-to(tablets) {
 		padding-left: 15px;
 		margin-left: 0;
+		float: right;
 	}
 	&__text {
 		text-transform: uppercase;
@@ -347,6 +362,9 @@
 	border-top: 1px solid #dedede;
 	padding: 14px 0;
 	font-size: 14px;
+	@include respond-to(tablets) {
+		font-size: 12px;
+	}
 }
 
 .call {
@@ -366,14 +384,12 @@
 		color: #000;
 		padding-left: 30px;
 		font-family: 'HelveticaNeue', Arial, sans-serif;
-		font-size: 14px;
 		margin-bottom: 10px;
 	}
 	&__number {
 		&:nth-child(2) {
 			padding-left: 25px;
 		}
-		font-size: 14px;
 		color: #999;
 		margin-left: 10px;
 		margin-right: 10px;
@@ -381,7 +397,6 @@
 		&-text {
 			color: #999;
 			font-family: 'HelveticaNeue', Arial, sans-serif;
-			font-size: 14px;
 		}
 	}
 }
@@ -403,7 +418,6 @@
 		color: #000;
 		padding-left: 30px;
 		font-family: 'HelveticaNeue', Arial, sans-serif;
-		font-size: 14px;
 		margin-bottom: 10px;
 	}
 }
@@ -417,6 +431,10 @@
 		font-size: 25px;
 		margin-bottom: 25px;
 		position: relative;
+		@include respond-to(tablets) {
+			font-size: 18px;
+			margin-bottom: 18px;
+		}
 		&::after {
 			position: absolute;
 			top: 50%;
@@ -430,6 +448,10 @@
 	}
 	&__item {
 		padding-right: 45px;
+		font-size: 14px;
+		@include respond-to(tablets) {
+			font-size: 12px;
+		}
 		&-title {
 			font-weight: 600;
 			margin-right: 5px;
@@ -437,6 +459,11 @@
 	}
 	&__code {
 		margin-top: 25px;
+		font-size: 14px;
+		@include respond-to(tablets) {
+			font-size: 12px;
+			margin-top: 14px;
+		}
 		&-title {
 			font-weight: 600;
 			margin-right: 5px;
@@ -450,10 +477,15 @@
 	}
 	&__text {
 		margin: 0;
-		margin-top: 20px;
+		font-size: 14px;
+		@include respond-to(tablets) {
+			font-size: 12px;
+			margin: 0;
+		}
 		&.details__text--important {
 			font-weight: 600;
 			padding-right: 35px;
+			margin-top: 20px;
 			a {
 				color: #000;
 			}
@@ -470,6 +502,9 @@
 	padding: 24px 0;
 	display: flex;
 	justify-content: flex-end;
+	@include respond-to(tablets) {
+		justify-content: space-between;
+	}
 	&__text {
 		font-size: 14px;
 		font-weight: 600;
