--- a/views/index.pug
+++ b/views/index.pug
@@ -137,10 +137,11 @@ html(lang="en")
 						p(class="details__text details__text--important") Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.
 					div(class="social")
 						span(class="social__text") Поделиться
-						a(href="#", class="social__item icon icon--facebook")
-						a(href="#", class="social__item icon icon--vk")
-						a(href="#", class="social__item icon icon--google-plus")
-						a(href="#", class="social__item icon icon--twitter")
+						div(class="social-links")
+							a(href="#", class="social__item icon icon--facebook")
+							a(href="#", class="social__item icon icon--vk")
+							a(href="#", class="social__item icon icon--google-plus")
+							a(href="#", class="social__item icon icon--twitter")
 			section(class="similar-goods")
 				h2(class="similar-goods__title") Похожие товары
 				div(class="similar-goods__block")
@@ -151,8 +152,8 @@ html(lang="en")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
-							span(class="price--old") 30 000 грн
-							span(class="price--new") 15 000 грн
+							span(class="item__price price--old") 30 000 грн
+							span(class="item__price price--new") 15 000 грн
 					div(class="item")
 						div(class="item__img")
 							a(href="#")
@@ -160,8 +161,8 @@ html(lang="en")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
-							span(class="price--old") 30 000 грн
-							span(class="price--new") 15 000 грн
+							span(class="item__price price--old") 30 000 грн
+							span(class="item__price price--new") 15 000 грн
 					div(class="item")
 						div(class="item__img")
 							a(href="#")
@@ -169,8 +170,8 @@ html(lang="en")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
-							span(class="price--old") 30 000 грн
-							span(class="price--new") 15 000 грн
+							span(class="item__price price--old") 30 000 грн
+							span(class="item__price price--new") 15 000 грн
 					div(class="item")
 						div(class="item__img")
 							a(href="#")
@@ -178,8 +179,8 @@ html(lang="en")
 						h3(class="item__title") Tanya Taylor
 						h4(class="item__subtitle") Andy Striped Mini Skirt
 						div(class="item__price")
-							span(class="price--old") 30 000 грн
-							span(class="price--new") 15 000 грн
+							span(class="item__price price--old") 30 000 грн
+							span(class="item__price price--new") 15 000 грн
 			section(class="see-other")
 				span(class="see-other__text") Смотрите также:
 				a(href="#", class="see-other__link") Одежда
