--- a/scss/_see-other.scss
+++ b/scss/_see-other.scss
@@ -2,6 +2,11 @@
 	border-top: 1px solid #dedede;
 	padding: 50px 0;
 	text-align: center;
+	font-size: 14px;
+	@include respond-to(tablets) {
+		padding: 35px 0;
+		font-size: 12px;
+	}
 	&__text {
 		color: #000;
 		font-weight: 600;
