--- a/views/mobile.pug
+++ b/views/mobile.pug
@@ -2,38 +2,37 @@ doctype html
 html(lang="en")
 	head
 		title= "Card"
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600", rel="stylesheet")
 		link(rel="stylesheet", type="text/css", href="css/normalize.css")
-		link(rel="stylesheet", type= "text/css", href="css/style.css")
+		link(rel="stylesheet", type= "text/css", href="css/mob-style.css")
 	body
 		header(class="header")
+			nav(role="navigation")
+				div(class="menu-icon", data-toggle-menu)
+				ul(class="main-menu")
+					li
+						a(href="#", class="main-menu__item") Женщинам
+					li
+						a(href="#", class="main-menu__item") Мужчинам
+					li
+						a(href="#", class="main-menu__item") Детям
+					li
+						a(href="#", class="main-menu__item") Косметика
+					li
+						a(href="#", class="main-menu__item") Для дома
+					li
+						a(href="#", class="main-menu__item") Бренды
 			div(class="header-logo", id="logo")
-				img(src="images/logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
-			div(class="switcher")
-				a(href="#", class="switcher__item icon icon--clock")
-					span Акции
-				a(href="#", class="switcher__item")
-					span Каталог
-			div(class="contact-search")
-				div(class="contact")
-					div(class="phone icon icon--phone icon--contact")
-						a(href="tel: +380443590899", class="contact__link") +380 44 359-08-99
-						span Пн-Вс: 9:00-21:00
-					div(class="login icon icon--avatar icon--contact")
-						a(href="#", class="contact__link") Войти
-					div(class="basket icon icon--shopping-cart icon--contact")
-						a(href="#", class="contact__link") Корзина
-				div(class="search")
-					input(type="search", placeholder="Поиск...", class="search__input")
-					div(class="search-icon")
-			nav(class="main-menu")
-				a(href="#", class="main-menu__item") Женщинам
-				a(href="#", class="main-menu__item") Мужчинам
-				a(href="#", class="main-menu__item") Детям
-				a(href="#", class="main-menu__item") Косметика
-				a(href="#", class="main-menu__item") Для дома
-				a(href="#", class="main-menu__item") Бренды
+				img(src="images/m-logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
+			div(class="shop")
+				a(href="#")
+					img(src="images/mob-shop-bag.png", alt="go shop", class="shop-img")
+		div(class="switcher")
+			a(href="#", class="switcher__item icon icon--clock")
+				span Акции
+			a(href="#", class="switcher__item")
+				span Каталог
 		main(class="main")
 			nav(class="breadcrumbs")
 				a(href="#", class="breadcrumbs__item") Главная страница
@@ -44,10 +43,8 @@ html(lang="en")
 				span /
 				span(class="breadcrumbs__item") Costa Patch Pocket Denim Top
 			section(class="product", id="product")
-				div(class="time-left icon icon--clock")
-					span(class="time-left__text") До конца распродажи
-					span(class="time-left__time") 3 дня, 15:37:01
 				div(class="photo")
+					img(src="images/mob-photo-min.jpg")
 				div(class="description")
 					h1(class="product__title") Current Elliott
 					h2(class="product__subtitle") Costa Patch Pocket Denim Top
