uncommented detection, start to edit product styles

--- a/scss/_m-breadcrumbs.scss
+++ b/scss/_m-breadcrumbs.scss
@@ -1,6 +1,7 @@
 .breadcrumbs {
 	font-weight: 300;
 	font-size: 12px;
+	margin-bottom: 30px;
 	&__item {
 		text-decoration: none;
 		color: #f68235;
