--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -237,6 +237,7 @@ html {
 .breadcrumbs {
   font-weight: 300;
   font-size: 12px;
+  margin-bottom: 30px;
 }
 
 .breadcrumbs__item {
@@ -247,5 +248,584 @@ html {
 
 .breadcrumbs__item:last-child {
   color: #000;
+}
+
+.product {
+  margin-top: 20px;
+}
+
+.product__title {
+  font-size: 25px;
+  color: #f68235;
+  margin: 0;
+  font-weight: 300;
+}
+
+.product__subtitle {
+  font-size: 18px;
+  font-weight: 200;
+  color: #000;
+  margin: 0;
+}
+
+.photo {
+  background: url("../images/photo-min.jpg") no-repeat;
+  width: 60%;
+}
+
+.description {
+  width: 40%;
+}
+
+.price {
+  margin-top: 15px;
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+
+.price--old {
+  text-decoration: line-through;
+  color: #999;
+  margin-right: 15px;
+}
+
+.price--new {
+  color: #f68235;
+}
+
+.color {
+  border-top: 1px solid #dedede;
+  padding: 14px 0;
+  font-size: 14px;
+}
+
+.color__text {
+  font-weight: 600;
+  display: inline-block;
+  margin-bottom: 10px;
+  margin-right: 5px;
+}
+
+.color__pic {
+  width: 35px;
+  height: 35px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.color__pic.active {
+  border: 2px solid #f68235;
+}
+
+.color--1 {
+  background-color: #636363;
+}
+
+.color--2 {
+  background-color: #0a0c44;
+}
+
+.color--3 {
+  background-color: #ffc66d;
+}
+
+.color--4 {
+  background-color: #b30016;
+}
+
+.color--5 {
+  background-color: #abc850;
+}
+
+.size {
+  border-top: 1px solid #dedede;
+  padding: 14px 0;
+  font-size: 14px;
+}
+
+.size__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.size__text {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.size__table {
+  color: #999;
+}
+
+.size__pic {
+  width: 35px;
+  height: 35px;
+  display: inline-block;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  color: #000;
+  text-align: center;
+  padding: 8px;
+}
+
+.size__pic.active {
+  border: 2px solid #f68235;
+}
+
+.size__pic.disabled {
+  color: #6d6d6d;
+  background-color: #dedede;
+}
+
+.size__fit {
+  margin-top: 15px;
+  color: #999;
+  display: inline-block;
+}
+
+.size__fit span {
+  font-family: 'OpenSans', sans-serif;
+  font-size: 14px;
+}
+
+.size__fit.icon--hanger {
+  position: relative;
+}
+
+.size__fit.icon--hanger::before {
+  position: absolute;
+  font-size: 13px;
+  background-color: #487eba;
+  width: 14px;
+  height: 14px;
+  border-radius: 100%;
+  color: #fff;
+  left: 100%;
+  margin-left: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  padding: 5px;
+  text-align: center;
+}
+
+.quantity {
+  border-top: 1px solid #dedede;
+  padding: 14px 0;
+  font-size: 14px;
+}
+
+.quantity__text {
+  font-weight: 600;
+}
+
+.quantity__count {
+  margin-top: 10px;
+}
+
+.quantity__count-less {
+  display: inline-block;
+  width: 8px;
+  height: 2px;
+  background-color: #000;
+  margin-right: 8px;
+  margin-bottom: 4px;
+}
+
+.quantity__count-number {
+  border: 1px solid #dedede;
+  padding: 8px 24px;
+  text-align: center;
+  color: #000;
+  font-family: 'OpenSans', sans-serif;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.quantity__count-more {
+  display: inline-block;
+  margin-left: 8px;
+  width: 8px;
+  height: 2px;
+  background-color: #000;
+  position: relative;
+  margin-bottom: 4px;
+}
+
+.quantity__count-more::before {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 8px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: #000;
+}
+
+.quantity__left {
+  position: absolute;
+  top: -54px;
+  left: 0;
+  background-color: #eaeaea;
+  padding: 7px;
+  text-align: center;
+}
+
+.quantity__left-number {
+  margin-right: 5px;
+}
+
+.quantity__left::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  border: 11px solid transparent;
+  border-top: 11px solid #eaeaea;
+}
+
+.like {
+  border: 1px solid #dedede;
+  display: inline-block;
+  padding: 10px 30px;
+  padding-left: 50px;
+  font-size: 12px;
+  font-weight: 200;
+  margin-top: 14px;
+  margin-bottom: 14px;
+  vertical-align: bottom;
+}
+
+.like.icon--heart {
+  position: relative;
+}
+
+.like.icon--heart::before {
+  font-size: 13px;
+  color: #000;
+  position: absolute;
+  left: 28px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.like span {
+  text-transform: uppercase;
+  color: #000;
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+}
+
+.add-to-cart {
+  display: inline-block;
+  padding-left: 30px;
+  font-size: 13px;
+  font-weight: 200;
+  margin-top: 14px;
+  margin-left: 22px;
+  background-color: #f68235;
+  vertical-align: bottom;
+  position: relative;
+  margin-bottom: 14px;
+}
+
+.add-to-cart__text {
+  text-transform: uppercase;
+  color: #fff;
+  background: url("../images/shop-bag-min.png") no-repeat;
+  background-position: 0 9px;
+  padding: 12px 25px;
+  display: inline-block;
+}
+
+.shop-bag-img {
+  height: 19px;
+  width: 15px;
+  margin-right: 12px;
+}
+
+.make-order {
+  border-top: 1px solid #dedede;
+  padding: 14px 0;
+  font-size: 14px;
+}
+
+.call {
+  margin-bottom: 10px;
+}
+
+.call.icon--phone {
+  position: relative;
+}
+
+.call.icon--phone::before {
+  position: absolute;
+  font-size: 22px;
+  color: #7c7c7c;
+  left: 0;
+  top: 0;
+}
+
+.call__text {
+  display: block;
+  color: #000;
+  padding-left: 30px;
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+  margin-bottom: 10px;
+}
+
+.call__number {
+  color: #999;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+}
+
+.call__number:nth-child(2) {
+  padding-left: 25px;
+}
+
+.call__number-text {
+  color: #999;
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+}
+
+.location.icon--location-pin {
+  position: relative;
+}
+
+.location.icon--location-pin::before {
+  position: absolute;
+  font-size: 22px;
+  color: #7c7c7c;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.location__text {
+  display: block;
+  color: #000;
+  padding-left: 30px;
+  font-family: 'HelveticaNeue', Arial, sans-serif;
+  margin-bottom: 10px;
+}
+
+.details {
+  border-top: 1px solid #dedede;
+  padding: 20px 0;
+}
+
+.details__title {
+  margin: 0;
+  font-weight: 300;
+  font-size: 25px;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+.details__title::after {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 0;
+  content: "";
+  width: 16px;
+  height: 2px;
+  background-color: #000;
+}
+
+.details__item {
+  padding-right: 45px;
+  font-size: 14px;
+}
+
+.details__item-title {
+  font-weight: 600;
+  margin-right: 5px;
+}
+
+.details__code {
+  margin-top: 25px;
+  font-size: 14px;
+}
+
+.details__code-title {
+  font-weight: 600;
+  margin-right: 5px;
+}
+
+.details__code-number {
+  color: #a7a7a7;
+}
+
+.details__info {
+  margin-top: 20px;
+}
+
+.details__text {
+  margin: 0;
+  font-size: 14px;
+}
+
+.details__text.details__text--important {
+  font-weight: 600;
+  padding-right: 35px;
+  margin-top: 20px;
+}
+
+.details__text.details__text--important a {
+  color: #000;
+}
+
+.details__text-item {
+  display: block;
+  padding-right: 30px;
+}
+
+.social {
+  border-top: 1px solid #dedede;
+  padding: 24px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.social__text {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.social__item {
+  margin-left: 20px;
+  color: #3a3a3a;
+  text-decoration: none;
+}
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .product__subtitle {
+    padding-right: 90px;
+  }
+
+  .photo {
+    background: url("../images/photo-tab-min.jpg") no-repeat;
+  }
+
+  .price--old {
+    margin: 0;
+    display: block;
+    font-size: 14px;
+  }
+
+  .price--new {
+    display: block;
+    font-size: 24px;
+  }
+
+  .color {
+    font-size: 12px;
+  }
+
+  .size {
+    font-size: 12px;
+  }
+
+  .size__pic {
+    padding: 9px;
+  }
+
+  .size__fit span {
+    font-size: 12px;
+  }
+
+  .size__fit.icon--hanger::before {
+    font-size: 10px;
+    width: 12px;
+    height: 12px;
+    padding: 3px;
+  }
+
+  .quantity__count-number {
+    padding: 9px;
+    width: 35px;
+    height: 35px;
+  }
+
+  .quantity__left {
+    font-size: 12px;
+    width: 90%;
+    left: 10%;
+  }
+
+  .quantity__left::after {
+    left: 75%;
+  }
+
+  .like {
+    padding: 18px;
+  }
+
+  .like.icon--heart::before {
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  .like span {
+    display: none;
+  }
+
+  .add-to-cart {
+    padding-left: 15px;
+    margin-left: 0;
+    float: right;
+  }
+
+  .add-to-cart__text {
+    padding: 12px 15px;
+    padding-left: 20px;
+  }
+
+  .make-order {
+    font-size: 12px;
+  }
+
+  .details__title {
+    font-size: 18px;
+    margin-bottom: 18px;
+  }
+
+  .details__item {
+    font-size: 12px;
+  }
+
+  .details__code {
+    font-size: 12px;
+    margin-top: 14px;
+  }
+
+  .details__text {
+    font-size: 12px;
+    margin: 0;
+  }
+
+  .social {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+  }
 }
 /*# sourceMappingURL=mob-style.css.map */
