--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,8 @@ html(lang="en")
 		link(rel="stylesheet", type= "text/css", href="css/style.css")
 	body
 		header(class="header")
+			div(class="go-to-mobile")
+				a(href="./mobile.html", class="mob-link") Go to mob
 			div(class="header-logo", id="logo")
 				img(src="images/logo-min.png", alt="One Club Luxury Shopping Club", class="logo-img")
 			div(class="switcher")
