--- a/css/mob-style.css
+++ b/css/mob-style.css
@@ -254,10 +254,10 @@ html {
 }
 
 .product__title {
-  font-size: 25px;
-  color: #f68235;
+  font-size: 18px;
+  color: #000;
   margin: 0;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .product__subtitle {
@@ -269,10 +269,6 @@ html {
 
 .photo {
   margin-bottom: 20px;
-}
-
-.description {
-  width: 40%;
 }
 
 .price {
